python dot() logic

--- a/matmul.ipynb
+++ b/matmul.ipynb
@@ -163,11 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-21T13:08:31.462241Z",
-     "start_time": "2020-12-21T13:08:19.756550Z"
+     "end_time": "2020-12-22T04:53:07.174886Z",
+     "start_time": "2020-12-22T04:53:01.769338Z"
     }
    },
    "outputs": [
@@ -177,7 +177,6 @@
      "text": [
       "A 행렬의 행 수를 입력하시오.2\n",
       "A 행렬의 열 수를 입력하시오.2\n",
-      "B 행렬의 행 수를 입력하시오.2\n",
       "B 행렬의 열 수를 입력하시오.2\n",
       "A행렬의 1행 1열의 값을 입력하시오.1\n",
       "A행렬의 1행 2열의 값을 입력하시오.2\n",
@@ -191,8 +190,7 @@
       " [4. 5.]] \n",
       " [[1. 0.]\n",
       " [0. 1.]]\n",
-      "1.0\n",
-      "5.0\n"
+      "[[1.0, 2.0], [4.0, 5.0]]\n"
      ]
     }
    ],
@@ -203,7 +201,7 @@
     "a_r = int(input(\"A 행렬의 행 수를 입력하시오.\"))\n",
     "a_c = int(input(\"A 행렬의 열 수를 입력하시오.\"))\n",
     "\n",
-    "b_r = int(input(\"B 행렬의 행 수를 입력하시오.\"))\n",
+    "b_r = a_c\n",
     "b_c = int(input(\"B 행렬의 열 수를 입력하시오.\"))\n",
     "# type(a_r)\n",
     "\n",
@@ -227,9 +225,19 @@
     "        \n",
     "print(a_matrix,'\\n', b_matrix)\n",
     "\n",
-    "for i in range(a_r):\n",
-    "    ab_matrix = a_matrix[i][0] * b_matrix[0][i] + a_matrix[i][1] * b_matrix[1][i]\n",
-    "    print(ab_matrix)"
+    "matmul = []\n",
+    "dot = 0\n",
+    "for row_a in range(a_r):\n",
+    "    matmul_cal = []\n",
+    "    for column_a in range(a_c):\n",
+    "        result = 0\n",
+    "        for column_b in range(b_c):\n",
+    "            \n",
+    "            dot = a_matrix[row_a][column_a] * b_matrix[column_a][column_b]\n",
+    "            result += dot\n",
+    "        matmul_cal.append(result)\n",
+    "    matmul.append(matmul_cal)\n",
+    "print(matmul)"
    ]
   },
   {
