--- a/matmul.ipynb
+++ b/matmul.ipynb
@@ -163,11 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-22T04:53:07.174886Z",
-     "start_time": "2020-12-22T04:53:01.769338Z"
+     "end_time": "2020-12-22T07:05:01.377178Z",
+     "start_time": "2020-12-22T07:04:54.591300Z"
     }
    },
    "outputs": [
@@ -190,6 +190,22 @@
       " [4. 5.]] \n",
       " [[1. 0.]\n",
       " [0. 1.]]\n",
+      "a_mat =  1.0 b_mat =  1.0\n",
+      "1.0\n",
+      "a_mat =  2.0 b_mat =  0.0\n",
+      "0.0\n",
+      "a_mat =  1.0 b_mat =  0.0\n",
+      "0.0\n",
+      "a_mat =  2.0 b_mat =  1.0\n",
+      "2.0\n",
+      "a_mat =  4.0 b_mat =  1.0\n",
+      "4.0\n",
+      "a_mat =  5.0 b_mat =  0.0\n",
+      "0.0\n",
+      "a_mat =  4.0 b_mat =  0.0\n",
+      "0.0\n",
+      "a_mat =  5.0 b_mat =  1.0\n",
+      "5.0\n",
       "[[1.0, 2.0], [4.0, 5.0]]\n"
      ]
     }
@@ -227,16 +243,18 @@
     "\n",
     "matmul = []\n",
     "dot = 0\n",
-    "for row_a in range(a_r):\n",
+    "for x in range(a_r):\n",
     "    matmul_cal = []\n",
-    "    for column_a in range(a_c):\n",
+    "    for y in range(a_c):\n",
     "        result = 0\n",
-    "        for column_b in range(b_c):\n",
+    "        for z in range(b_c):\n",
     "            \n",
-    "            dot = a_matrix[row_a][column_a] * b_matrix[column_a][column_b]\n",
+    "            dot = a_matrix[x][z] * b_matrix[z][y]\n",
+    "            print(\"a_mat = \", a_matrix[x][z], \"b_mat = \", b_matrix[z][y])\n",
+    "            print(dot)\n",
     "            result += dot\n",
     "        matmul_cal.append(result)\n",
-    "    matmul.append(matmul_cal)\n",
+    "    matmul.append(matmul_cal) # list를 append 함으로써 2차원 -> numpy사용해서 배열을 만들 필요가 없어진다.\n",
     "print(matmul)"
    ]
   },
