--- a/matmul.ipynb
+++ b/matmul.ipynb
@@ -289,6 +289,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 2]\n",
+      " [6 5]]\n",
+      "[[ 2  4  6  8]\n",
+      " [ 6 10 16 23]]\n",
+      "[[ 54  22]\n",
+      " [152  59]]\n",
+      "[[108  44]\n",
+      " [304 118]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([[1,2,1],[4,5,2]])\n",
+    "b = np.array([[1, 0], [0,1], [1,0]])\n",
+    "c = np.array([[1, 0, 1, 3], [0, 2, 2, 1]])\n",
+    "d = np.array([[2, 0], [0,2], [3, 1], [4, 1]])\n",
+    "e = np.array([[2, 0], [0, 2]])\n",
+    "\n",
+    "ab = np.matmul(a, b)\n",
+    "print(ab)\n",
+    "abc = np.matmul(ab, c)\n",
+    "print(abc)\n",
+    "abcd = np.matmul(abc, d)\n",
+    "print(abcd)\n",
+    "abcde = np.matmul(abcd, e)\n",
+    "print(abcde)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -311,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
