--- a/opencv90/Untitled.ipynb
+++ b/opencv90/Untitled.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-01T13:44:34.360968Z",
-     "start_time": "2021-01-01T13:44:33.214028Z"
+     "start_time": "2021-01-01T14:06:25.143Z"
     }
    },
    "outputs": [],
@@ -18,10 +17,16 @@
     "import math\n",
     "\n",
     "img = cv2.imread(\"a.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+    "cv2.imshow(\"original\", img)\n",
+    "# print(img.shape)\n",
+    "(h, w) = img.shape\n",
+    "(cx, cy) = (w / 2, h / 2) # center point\n",
     "\n",
+    "M = cv2.getRotationMatrix2D((cx, cy), 90, 1.0)\n",
+    "rotated = cv2.warpAffine(img, M, (w, h))\n",
     "\n",
+    "cv2.imshow(\"rotated 90 degrees\", rotated) # anti-clockwise \n",
     "\n",
-    "cv2.imshow(\"img\", img)\n",
     "cv2.waitKey()\n",
     "cv2.destroyAllWindows()"
    ]
