--- a/opencv90/Untitled.ipynb
+++ b/opencv90/Untitled.ipynb
@@ -5,10 +5,19 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-01-01T14:06:25.143Z"
+     "start_time": "2021-01-01T14:11:31.616Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6.12323400e-17  1.00000000e+00 -2.84217094e-14]\n",
+      " [-1.00000000e+00  6.12323400e-17  5.12000000e+02]]\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -22,9 +31,10 @@
     "(h, w) = img.shape\n",
     "(cx, cy) = (w / 2, h / 2) # center point\n",
     "\n",
-    "M = cv2.getRotationMatrix2D((cx, cy), 90, 1.0)\n",
+    "M = cv2.getRotationMatrix2D((cx, cy), 90, 1)\n",
+    "print(M)\n",
     "rotated = cv2.warpAffine(img, M, (w, h))\n",
-    "\n",
+    "# print(rotated)\n",
     "cv2.imshow(\"rotated 90 degrees\", rotated) # anti-clockwise \n",
     "\n",
     "cv2.waitKey()\n",
