trying to get the vertex values of the rotated image

--- a/opencv90/opencv90.ipynb
+++ b/opencv90/opencv90.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-02T13:16:31.363117Z",
-     "start_time": "2021-01-02T13:16:27.174066Z"
+     "end_time": "2021-01-02T13:51:22.774904Z",
+     "start_time": "2021-01-02T13:50:35.054395Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scale =  0.7071823204419889\n",
+      "[[ 5.00053414e-01  5.00053414e-01 -2.73481317e-02]\n",
+      " [-5.00053414e-01  5.00053414e-01  2.56000000e+02]]\n",
+      "nW, nH =  512 512\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -26,8 +37,16 @@
     "\n",
     "\n",
     "def rotateImage(degrees):\n",
-    "    M = cv2.getRotationMatrix2D((cx, cy), degrees, 1)\n",
-    "    rotated = cv2.warpAffine(img, M, (w, h))\n",
+    "    scale = np.abs(512 / 724)\n",
+    "    print(\"scale = \", scale)\n",
+    "    M = cv2.getRotationMatrix2D((cx, cy), degrees, scale)\n",
+    "    print(M)\n",
+    "    cos = np.abs(M[0,0])\n",
+    "    sin = np.abs(M[0,1])\n",
+    "    nW = int((h * sin) + (w * cos))\n",
+    "    nH = int((h * cos) + (w * sin))\n",
+    "    print(\"nW, nH = \", nW, nH)\n",
+    "    rotated = cv2.warpAffine(img, M, (724, 724))\n",
     "    cv2.imshow(\"rotatedImage\", rotated)\n",
     "    return M\n",
     "\n",
