--- a/LinkedListOnly/LinkedListOnly/Language/Resource.resx
+++ b/LinkedListOnly/LinkedListOnly/Language/Resource.resx
@@ -123,6 +123,9 @@
   <data name="DeleteButton" xml:space="preserve">
     <value />
   </data>
+  <data name="head" xml:space="preserve">
+    <value />
+  </data>
   <data name="label1" xml:space="preserve">
     <value />
   </data>
@@ -130,6 +133,12 @@
     <value />
   </data>
   <data name="readButton" xml:space="preserve">
+    <value />
+  </data>
+  <data name="something" xml:space="preserve">
+    <value />
+  </data>
+  <data name="tail" xml:space="preserve">
     <value />
   </data>
   <data name="textBox1" xml:space="preserve">
