--- a/LinkedListOnly/LinkedListOnly/Language/Resource.ko-KR.resx
+++ b/LinkedListOnly/LinkedListOnly/Language/Resource.ko-KR.resx
@@ -132,6 +132,9 @@
   <data name="label4" xml:space="preserve">
     <value>인덱스</value>
   </data>
+  <data name="no" xml:space="preserve">
+    <value>아니요</value>
+  </data>
   <data name="readButton" xml:space="preserve">
     <value>읽어오기</value>
   </data>
@@ -143,5 +146,8 @@
   </data>
   <data name="updateButton" xml:space="preserve">
     <value>업데이트</value>
+  </data>
+  <data name="yes" xml:space="preserve">
+    <value>네</value>
   </data>
 </root>
